[workspace]
resolver = "2"
members = [
    "knock00_helo_world",
    "knock01_addition",
    "knock02_modulo",
    "knock03_input",
    "knock04_input_and_calc",
    "knock05_arithmetic",
    "knock06_if_zero", "knock07_zero_or_not", "knock08_is_positive", "knock09_positive_or_negative", "knock10_absolute_value", "knock11_repeat_hello", "knock12_any_repeat_hello", "knock13_count_up", "knock14_count_down", "knock15_count_up_twice", "knock16_end_of_zero", "knock17_array_initialize", "knock18_array_input_initialize",
]
